--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.Minestom:Minestom:83ab75d1bf'
+    implementation 'org.yaml:snakeyaml:1.30'
 }
 
 test {
